@@ -492,7 +492,8 @@ webkit_tests_ldadd = \
 
 TEST_PROGS += Programs/unittests/testwebframe \
 	Programs/unittests/testwebbackforwardlist \
-	Programs/unittests/testwebhistoryitem
+	Programs/unittests/testwebhistoryitem \
+	Programs/unittests/testdownload
 
 # Add additional tests here
 Programs_unittests_testwebframe_SOURCES = WebKit/gtk/tests/testwebframe.c
@@ -507,6 +508,9 @@ Programs_unittests_testwebhistoryitem_SOURCES = WebKit/gtk/tests/testwebhistoryi
 Programs_unittests_testwebhistoryitem_CFLAGS = $(webkit_tests_cflags)
 Programs_unittests_testwebhistoryitem_LDADD = $(webkit_tests_ldadd)
 
+Programs_unittests_testdownload_SOURCES = WebKit/gtk/tests/testdownload.c
+Programs_unittests_testdownload_CFLAGS = $(webkit_tests_cflags)
+Programs_unittests_testdownload_LDADD = $(webkit_tests_ldadd)
 
 # Autogenerated sources
 BUILT_SOURCES := \
