@@ -1,3 +1,12 @@
+2009-04-01  Christian Dywan  <christian@twotoasts.de>
+
+        Reviewed by Holger Freyther.
+
+        Unit test WebKitDownload
+        http://bugs.webkit.org/show_bug.cgi?id=24844
+
+        * GNUmakefile.am: Add a unit test for downloading.
+
 2009-04-01  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
 
         Unreviewed build fix. Fix make distcheck, after the gtk-doc
